PROPOSED APIを使って作ろうとしたが、エラー解消できず

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
       }
     ]
   },
+  "enabledApiProposals": ["chatSessionsProvider"],
   "scripts": {
     "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
